[project]
name = "bedrock-chatbot"
version = "0.1.0"
description = "A streamlined chat bot based on AWS Bedrock, built with Streamlit and LangChain"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-community>=0.0.20",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"